re-enable all compat once again