@@ -89,7 +89,7 @@ public class REIMoonwormQueenCategory implements DisplayCategory<DefaultCrafting
 			slots.get(ingredient.getIndex()).entries(ingredient.get());
 		}
 		widgets.addAll(slots);
-		widgets.add(Widgets.createSlot(new Point(startPoint.x + 95, startPoint.y + 19)).entries(display.getOutputEntries().get(0)).disableBackground().markOutput());
+		widgets.add(Widgets.createSlot(new Point(startPoint.x + 95, startPoint.y + 19)).entries(display.getOutputEntries().getFirst()).disableBackground().markOutput());
 		widgets.add(Widgets.createShapelessIcon(bounds));
 		return widgets;
 	}
